Commiting the improvements

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ logging.level.org.hibernate.sql=DEBUG
 logging.level.org.springframework.jdbc.core=TRACE
 
 # Hibernate logging options (INFO only shows startup messages)
-log4j.logger.org.hibernate=INFO
+#log4j.logger.org.hibernate=INFO
 
 # Log JDBC bind parameter runtime arguments
 log4j.logger.org.hibernate.type=trace
