change pwd before login

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,5 +29,6 @@ logging.pattern.file=%d{dd-MM-yyyy HH:mm:ss.SSS} [%thread] %-5level %logger{36}.
 jwt.signing.key.secret=jwtsecretkey
 jwt.get.token.uri=/authenticate
 jwt.refresh.token.uri=/refresh
+jwt.invalidate.token.uri=/invalidate
 jwt.http.request.header=Authorization
 jwt.token.expiration.in.seconds=3600
