--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.3.1.RELEASE</version>
 		<relativePath />
-		<!-- <relativePath />  --><!-- lookup parent from repository -->
+		<!-- <relativePath /> --><!-- lookup parent from repository -->
 	</parent>
 
 	<groupId>com.jetbet</groupId>
@@ -23,6 +23,11 @@
 	</properties>
 
 	<dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-webflux</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -106,7 +111,7 @@
 			<version>1.19.4</version>
 		</dependency>
 
-<!-- Auth Dependencies -->
+		<!-- Auth Dependencies -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
